cabal-version:      2.4
name:               MyProjectEulerSolutions
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/jeslie0/Project-Euler/issues

-- The license under which the package is released.
-- license: "CC BY-NC-SA 4.0"
author:             James Leslie
maintainer:         jamesleslie@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.org

library
  hs-source-dirs:      src
  exposed-modules:     Fibonacci,
                       Primes
  build-depends:       base,
                       containers,
                       mtl,
                       pqueue,
                       vector

executable P001
    main-is:          P001.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P001 -O2
    
executable P002
    main-is:          P002.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      MyProjectEulerSolutions,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P002 -O2
    
executable P003
    main-is:          P003.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      MyProjectEulerSolutions
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P003 -O2

executable P004
    main-is:          P004.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P004 -O2

executable P005
    main-is:          P005.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      containers,
                      mtl,
                      MyProjectEulerSolutions,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P005 -O2
    
executable P006
    main-is:          P006.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P006 -O2
    
executable P007
    main-is:          P007.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      MyProjectEulerSolutions
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P007 -O2
    
executable P008
    main-is:          P008.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P008 -O2
    
executable P009
    main-is:          P009.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P009 -O2

executable P010
    main-is:          P010.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      MyProjectEulerSolutions
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P010 -O2
    
executable P011
    main-is:          P011.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P011 -O2
    
executable P012
    main-is:          P012.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      MyProjectEulerSolutions,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P012 -O2
    
executable P013
    main-is:          P013.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P013 -O2
    
executable P014
    main-is:          P014.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      containers,
                      mtl,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P014 -O2
    
executable P015
    main-is:          P015.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P015 -O2
    
executable P016
    main-is:          P016.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -main-is P016 -O2